# watcher

./: .gitignore  CMakeLists.txt  README.MD  run.bat  run.sh
config/: global.conf  watchdog.conf  watchdog.json
include/utils/: utils.hpp
src/: main  main.cpp  main2.cpp
src/core/config/: config.cpp  config.hpp
src/core/view/: view.cpp  view.hpp
src/sample/: data.cpp  kirk.cpp  picard.cpp  spock.cpp  uhura.cpp
src/service/unix/: ProcessManager.cpp  ProcessManager.hpp
src/service/unix/scripts/: cpu.sh  mem.sh
